@@ -13,10 +13,10 @@ package org.junit.jupiter.params;
 import java.util.Arrays;
 import java.util.Optional;
 
-import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.extension.ExtensionConfigurationException;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.api.extension.ExtensionContext.Namespace;
+import org.junit.jupiter.params.ResolverFacade.RequiredParameterCount;
 import org.junit.platform.commons.logging.Logger;
 import org.junit.platform.commons.logging.LoggerFactory;
 import org.junit.platform.commons.util.Preconditions;
@@ -49,30 +49,33 @@ class ArgumentCountValidator {
 				int totalCount = this.arguments.getTotalLength();
 				Preconditions.condition(consumedCount == totalCount,
 					() -> wrongNumberOfArgumentsMessages("consumes", consumedCount, null, null));
-			}
-			default -> throw new ExtensionConfigurationException(
-				"Unsupported argument count validation mode: " + argumentCountValidationMode);
+				break;
+			default:
+				throw new ExtensionConfigurationException(
+					"Unsupported argument count validation mode: " + argumentCountValidationMode);
 		}
 	}
 
 	private void validateRequiredArgumentsArePresent() {
-		var requiredParameterCount = this.declarationContext.getResolverFacade().getRequiredParameterCount();
+		RequiredParameterCount requiredParameterCount = this.declarationContext.getResolverFacade().getRequiredParameterCount();
 		if (requiredParameterCount != null) {
-			var totalCount = this.arguments.getTotalLength();
+			int totalCount = this.arguments.getTotalLength();
 			Preconditions.condition(requiredParameterCount.value() <= totalCount,
 				() -> wrongNumberOfArgumentsMessages("has", requiredParameterCount.value(), "required",
 					requiredParameterCount.reason()));
 		}
 	}
 
-	private String wrongNumberOfArgumentsMessages(String verb, int actualCount, @Nullable String parameterAdjective,
-			@Nullable String reason) {
+	private String wrongNumberOfArgumentsMessages(String verb, int actualCount, String parameterAdjective,
+			String reason) {
 		int totalCount = this.arguments.getTotalLength();
-		return "Configuration error: @%s %s %s %s%s%s but there %s %s %s provided.%nNote: the provided arguments were %s".formatted(
+		return String.format(
+			"Configuration error: @%s %s %s %s%s%s but there %s %s %s provided.%nNote: the provided arguments were %s",
 			this.declarationContext.getAnnotationName(), verb, actualCount,
 			parameterAdjective == null ? "" : parameterAdjective + " ",
-			pluralize(actualCount, "parameter", "parameters"), reason == null ? "" : " (due to %s)".formatted(reason),
-			pluralize(totalCount, "was", "were"), totalCount, pluralize(totalCount, "argument", "arguments"),
+			pluralize(actualCount, "parameter", "parameters"),
+			reason == null ? "" : String.format(" (due to %s)", reason), pluralize(totalCount, "was", "were"),
+			totalCount, pluralize(totalCount, "argument", "arguments"),
 			Arrays.toString(this.arguments.getAllPayloads()));
 	}
 
